Feat: 중간 최종 업로드